[package]
name = "memory"
version = "0.1.0"
authors = ["Guillaume Dadoy <guillaume.dadoy@ik.me>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
sixtyfps = "0.1.5"
rand = "0.8" # Added
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
